--- a/examples/hello/package.json
+++ b/examples/hello/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "py-loader": "^0.2.0",
+    "axios": "*",
+    "py-loader": "file:../",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.4.2"
   }
