--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "files": [
     "index.js"
   ],
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "loader-utils": "^1.1.0",
     "node-cmd": "^3.0.0"
@@ -15,5 +18,11 @@
     "type": "git",
     "url": "git@github.com:martim00/python-webpack-loader.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^22.1.4"
+  },
+  "jest": {
+    "clearMocks": true
+  }
 }
